# masher

./: .clang-format  .gitignore  Cargo.toml  flash.py  format.py  make.py
.cargo/: avr-attiny44.json  avr-attiny84.json  config.toml
projects/eda/: eda.kicad_pcb  eda.kicad_pro
projects/firmware/: Cargo.toml  Makefile  README.md  main.c  rust-toolchain.toml  usbconfig.h
projects/firmware/src/: firmware.rs  main.c  pipeline.rs  usbconfig.h
projects/firmware/src/usbdrv/: oddebug.c  oddebug.h  usbconfig-prototype.h  usbdrv.c  usbdrv.h  usbportability.h
projects/firmware/src/util/: config.h  util.c  util.h
projects/firmware/usbdrv/: oddebug.c  oddebug.h  usbconfig-prototype.h  usbdrv.c  usbdrv.h  usbportability.h
projects/scripts/: firmware-rel.py  flash.py
